add Angularjs jQuery Bootstrap

--- a/static/view/index.html
+++ b/static/view/index.html
@@ -11,6 +11,6 @@
     and Electron <script>document.write(process.versions.electron)</script>.
     <webview src="https://www.github.com/"></webview>
     <webview src="http://www.google.com/" nodeintegration></webview>
-    <script src="static/js/test.js"></script>
+<script src="/static"></script>
   </body>
 </html>
